--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.3.0",
+    "axios": "^0.21.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-on-rails": "12.0.5-beta.0",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
